--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       And we're trying to recover our data as best as we can do.
     </p>
     <p>
-      But there's a change that our data will be lost forever. :(
+      But there's a chance that our data will be lost forever. :(
     </p>
 
     <h2>Contact us</h2>
