--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     >
+  <style>
+    .del {
+      text-decoration: line-through;
+    }
+  </style>
 </head>
 <body>
   <div class="jumbotron">
@@ -28,9 +33,16 @@
       I've bought one new SSD for replacement.
       And we're trying to recover our data as best as we can do.
     </p>
-    <p>
+
+    <p class="del">
       But there's a chance that our data will be lost forever. :(
     </p>
+
+    <p>
+      Hackme CTF VM image file has been recovered, thanks <a href="https://www.osslab.com.tw/">OSSLab</a> for data recovery!
+    </p>
+
+    <p>Games might be online again tomorrow (2017/08/02)</p>
 
     <h2>Contact us</h2>
 
