--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hackme CTF is under maintenance</title>
+  <title>Hackme CTF is down for maintenance</title>
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -21,28 +21,9 @@
   </div>
 
   <div class="container">
-    <h2>We are sorry :(</h2>
+    <h2>Sorry :(</h2>
 
-    <p>
-      Due to disk failure issue, our challenges will be close for a while!
-    </p>
-
-    <h2>Data recovery is in progress</h2>
-
-    <p>
-      I've bought one new SSD for replacement.
-      And we're trying to recover our data as best as we can do.
-    </p>
-
-    <p class="del">
-      But there's a chance that our data will be lost forever. :(
-    </p>
-
-    <p>
-      Hackme CTF VM image file has been recovered, thanks <a href="https://www.osslab.com.tw/">OSSLab</a> for data recovery!
-    </p>
-
-    <p>Games might be online again tomorrow (2017/08/02)</p>
+    <p>We are going to backup everything and upgrade internal system.</p>
 
     <h2>Contact us</h2>
 
@@ -52,7 +33,7 @@
 
     <p>Contact via email: <code>base64&#46;decode('aW&#53;uZHlbLl&#49;&#48;d&#49;thXWdtYWlsWy&#53;dY&#50;9t')</code></p>
 
-    <!-- not-A-f1ag{disk failure without backup} -->
+    <!-- not-A-f1ag{upgr4d1ng-2-u6untu-1804} -->
   </div>
 
   <script>
